--- a/ContosoConf/registered.htm
+++ b/ContosoConf/registered.htm
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
         <title>Registered for ContosoConf</title>
-        
         <link href="/styles/site.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
